fix: hero image position mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -389,7 +389,8 @@ nav a, nav p a {
   }
 
   .hero-section {
-    min-height: 300px;
+    min-height: 250px;
+    background-position: center center;
   }
 
   article {
